# twpa_design

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
docs/: atl_twpa_designer_reference.md  engineering_notes.md  filter_builder_reference.md  julia_wrapper_reference.md  netlist_JC_builder_reference.md
src/twpa_design/: __init__.py  atl_twpa_designer.py  filter_builder.py  helper_functions.py  julia_setup.py  julia_wrapper.py  netlist_JC_builder.py  plots_params.py
src/twpa_design/designs/: 4wm_jtwpa_01.npz  4wm_jtwpa_01.py  4wm_ktwpa_01.npz  4wm_ktwpa_01.py  b_jtwpa_01.npz  b_jtwpa_01.py  floquet_jtwpa_01.npz  floquet_jtwpa_01.py  floquet_ktwpa_01.npz  floquet_ktwpa_01.py  floquet_rfsq_twpa_01.npz  floquet_rfsq_twpa_01.py  rfsq_twpa_01.npz  rfsq_twpa_01.py
src/twpa_design/examples/: atl_twpa_designer_example.py  atl_twpa_plotter_example.py  designer_and_JC_plotter_example.py  diplexer_twpa_example.py  julia_plotter_example.py  julia_wrapper_example.py  netlist_JC_builder_example.py  twpa_twpa_example.py
src/twpa_design/netlists/: 4wm_jtwpa_2002cells_01.py  4wm_ktwpa_5004cells_01.py  b_jtwpa_2000cells_01.py  diplexed_4wm_jtwpa_2002cells_01.py  floquet_jtwpa_2497cells_01.py  floquet_ktwpa_9996cells_01.py  floquet_rfsq_twpa_2497cells_01.py  rfsq_twpa_2497cells_01.py  twpa_twpa_4wm_jtwpa_2002cells_01.py
src/twpa_design/notebooks/: JJvsNL_comparison.ipynb  julia_wrapper.ipynb  (+3 more)
tests/: conftest.py  test_Z_profile.py  test_examples.py  test_filter_builder.py  test_imports.py  test_julia_wrapper.py  test_loss_taper.py  test_scipy_env.py  test_z_taper.py
(+9 files in other folders)
